Ajustes en crear.htmlm editar.html

--- a/vistas/busqueda_avanzada.html
+++ b/vistas/busqueda_avanzada.html
@@ -67,11 +67,11 @@
                             <div class="form-group">
                                 <label for="exampleFormControlSelect1">Seleccionar Tipo</label>
                                 <select class="form-control" id="exampleFormControlSelect1">
-                                  <option>1</option>
-                                  <option>2</option>
-                                  <option>3</option>
-                                  <option>4</option>
-                                  <option>5</option>
+                                  <option>Información</option>
+                                  <option>Buenos</option>
+                                  <option>Malos</option>
+                                  <option>Neutros</option>
+                               
                                 </select>
                               </div>
 							<!--Seleccionar fecha -->
@@ -98,14 +98,16 @@
                               </div>
                               <!--Seleccionar emociones -->
                               <div class="form-group">
-                                <label for="exampleFormControlSelect1">Seleccionar Emociones </label>
+                                <label for="exampleFormControlSelect1">Seleccionar Emoticon </label>
                                 <select class="form-control" id="exampleFormControlSelect1">
-                                  <option>1</option>
-                                  <option>2</option>
-                                  <option>3</option>
-                                  <option>4</option>
-                                  <option>5</option>
+                                  <option>&#128512</option>
+                                  <option>&#128513</option>
+                                  <option>&#128518</option>
+                                  <option>&#128514</option>
+                                  <option>&#129299</option>
                                 </select>
+
+
                               </div>
                               <!--Seleccionar Compañia -->
                               <div class="form-group">
