--- a/vistas/error.html
+++ b/vistas/error.html
@@ -36,9 +36,10 @@
 		<!-- Wrapper -->
 		<div id="wrapper">
 			<section id="intro" class="wrapper style1 fullscreen fade-up">
-				<div class="inner"><!--no me toma la imagen-->
-                    <img src="assets/images/404.jpg" alt="error-404">
-                    <h1>soy el error 404</h1>
+				<div class="inner">
+					
+                    <img  class="image" responsive src="images/404.jpg" alt="error-404">
+                    
 				</div>
 			</section>
 		</div>		
