--- a/vistas/detalle.html
+++ b/vistas/detalle.html
@@ -58,6 +58,7 @@
                                 <br>
                                 <p class="card-text"> Fecha: 21/9/2021 </p>
                                 <p class="card-text"> Horario: 18:30 a 13:30 </p>
+								<p class="card-text"> Emociones: &#x1F625; &#x1F620; </p>
                                 <p class="card-text"> Ubicación </p>
                                 <iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.4254375363407!2d-58.40955884957783!3d-34.59340206436271!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca85160a5251%3A0x653f406280c4b08d!2sCharcas%202909%2C%20C1425BMI%20CABA!5e0!3m2!1ses-419!2sar!4v1634167466857!5m2!1ses-419!2sar"></iframe>
                               
