--- a/vistas/buscar2.html
+++ b/vistas/buscar2.html
@@ -39,7 +39,7 @@
 				<div class="inner">
 					<!--Tabs-->
 					<nav class="nav">
-						<a class="nav-link active" aria-current="page" href="#busqueda_simple">Busqueda simple</a>
+						<a class="nav-link active" aria-current="page" href="#busqueda_simple">Busqueda simple</a> 
 						<a class="nav-link" href="#">Busqueda Avanzada</a>
 						<a class="nav-link" href="#">Favoritos</a>
 					
@@ -67,11 +67,12 @@
                             <div class="form-group">
                                 <label for="exampleFormControlSelect1">Seleccionar Tipo</label>
                                 <select class="form-control" id="exampleFormControlSelect1">
-                                  <option>1</option>
-                                  <option>2</option>
-                                  <option>3</option>
-                                  <option>4</option>
-                                  <option>5</option>
+                                  <option>Cualquiera</option>
+                                  <option>Video</option>
+                                  <option>Audio</option>
+                                  <option>Imagen</option>
+                                  <option>Aroma</option>
+                                  <option>Sabor</option>
                                 </select>
                               </div>
 							<!--Seleccionar fecha -->
@@ -89,22 +90,28 @@
                               <div class="form-group">
                                 <label for="exampleFormControlSelect1">Seleccionar Importancia </label>
                                 <select class="form-control" id="exampleFormControlSelect1">
-                                  <option>1</option>
-                                  <option>2</option>
-                                  <option>3</option>
-                                  <option>4</option>
-                                  <option>5</option>
+                                  <option>Cualquiera</option>
+                                  <option>1/4</option>
+                                  <option>2/4</option>
+                                  <option>3/4</option>
+                                  <option>4/4</option>
                                 </select>
                               </div>
                               <!--Seleccionar emociones -->
                               <div class="form-group">
                                 <label for="exampleFormControlSelect1">Seleccionar Emociones </label>
                                 <select class="form-control" id="exampleFormControlSelect1">
-                                  <option>1</option>
-                                  <option>2</option>
-                                  <option>3</option>
-                                  <option>4</option>
-                                  <option>5</option>
+                                  <option>Cualquiera</option>
+                                  <option>&#x1F600;</option>
+                                  <option>&#x1F625;</option>
+                                  <option>&#x1F620;</option>
+                                  <option>&#x1F923;</option>
+                                  <option>&#x1F62D;</option>
+                                  <option>&#x1F60E;</option>
+                                  <option>&#x1F628;</option>
+                                  <option>&#x1F976;</option>
+                                  <option>&#x1F975;</option>
+                                  <option>&#x1F51E;</option>
                                 </select>
                               </div>
                               <!--Seleccionar Compañia -->
