--- a/vistas/buscar2.html
+++ b/vistas/buscar2.html
@@ -71,8 +71,7 @@
                                   <option>Video</option>
                                   <option>Audio</option>
                                   <option>Imagen</option>
-                                  <option>Aroma</option>
-                                  <option>Sabor</option>
+                                  <option>Información</option>
                                 </select>
                               </div>
 							<!--Seleccionar fecha -->
